imp : alt added

--- a/bussiness-card/index.html
+++ b/bussiness-card/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="card">
-        <img class="avatar" src="images/dheeraj.jpg">
+        <img class="avatar" src="images/dheeraj.jpg" alt="dheeraj is smiling :-> ">
         <div>
             <h3>Dheeraj Purohit</h3>
             <p>Frontend Developer</p>
