fix: rubber duck code review ✅

--- a/UI/src/passenger-counter-app/index.html
+++ b/UI/src/passenger-counter-app/index.html
@@ -15,8 +15,8 @@
     <h2 class="title text-color font-32">No of Passengers:
       <span id="display-count">0</span>
     </h2>
-    <button class="btn btn-increment" id="increment-count" onclick="increment()">Increment</button>
-    <button class="btn btn-save" id="save-count" onclick="save()">Save</button>
+    <button class="btn" id="increment-btn" onclick="increment()">Increment</button>
+    <button class="btn" id="save-btn" onclick="save()">Save</button>
     <p class="text-color font-24" id="last-entries">Last Entries:</p>
   </div>
   <script src="index.js"></script>
