--- a/UI/src/css-masterclass/index.html
+++ b/UI/src/css-masterclass/index.html
@@ -14,6 +14,9 @@
 
 <body>
   <div class="container">
+
+    <header>I am header</header>
+
     <div class="badge-container">
       <span class="icon-msg">
         <i class="fa-solid fa-envelope fa-8x"></i>
@@ -22,9 +25,13 @@
 
     </div>
 
+
+
+
     <div class="toast" id="toast-bar">
-      i am toast
+      I am Toast
     </div>
+
 
     <button class="btn-toast btn" id="toast-btn">display toast</button>
 
